[gd_scene load_steps=4 format=3 uid="uid://ki05t1ys4gu1"]

[ext_resource type="Script" path="res://Entities/LevelObstacles/triggered_spikes.gd" id="1_3l2g1"]
[ext_resource type="PackedScene" uid="uid://b5qebaxc55f4r" path="res://Entities/LevelObstacles/animate_spikes.tscn" id="1_bsdun"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p7s71"]
radius = 55.2268

[node name="TriggeredSpikes" type="Area2D" groups=["Traps"]]
script = ExtResource("1_3l2g1")

[node name="AnimateSpikes" parent="." instance=ExtResource("1_bsdun")]
position = Vector2(-32, -16)
curr_state = 2

[node name="AnimateSpikes2" parent="." instance=ExtResource("1_bsdun")]
position = Vector2(-13, -16)
curr_state = 2

[node name="AnimateSpikes3" parent="." instance=ExtResource("1_bsdun")]
position = Vector2(5, -16)
curr_state = 2

[node name="AnimateSpikes4" parent="." instance=ExtResource("1_bsdun")]
position = Vector2(23, -16)
curr_state = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_p7s71")

[connection signal="area_entered" from="." to="." method="_on_Triggered_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Triggered_area_exited"]
